Created ranger plugin